- Add allow group when local users only mode on FTP service.
- Add RRDtool and related files.
- Add mapping DOS attributes on CIFS/SMB. (OFF by default)
- Add various daemon/utility/debug tools for future development.
- Add hosts allow on console menu.
- Add autoresize on SD image. (ARM only)
- Add sendmail_path to php.ini to use mail() function.
- Add auto start/stop VM. (virtualbox)
- Remove usesendfile on CIFS/SMB.
- Remove legacy disk aliases such as /dev/ad0.
- Change DSA private key to RSA private key on SSH service.
- Change ZFS pool info reflected from zpool list.
- Change Store DOS attributes to OFF by default.
- Upgrade bash 4.3 to patch 42.
- Upgrade lighttpd to 1.4.37.
- Upgrade isboot to 0.2.13.
- Upgrade tzdata to 2015g.
- Upgrade mDNSResponder to 576.30.4.
- Upgrade php to 5.6.15.
- Upgrade samba to 4.2.5.
- Upgrade dmidecode to 3.0.
- Upgrade iperf3 to 3.1.

Fixes:
- Fix cannot execute samba if time server is empty.
- Fix missing loader parameters on fresh installation. (full only)
- Fix NTFS is not detected on Import disks.
- Fix SSL certificate link. (ticket #239)
- Fix NFS share network. (ticket #238)
- Fix boot time ntpdate fail when AD DC enabled.
- Fix wrong path in Samba AD. (ticket #228, #232)
- Undefined symbol "av_find_stream_info" in fuppes/libmetadata_libavformat.so.
- AFP share is not advised.
- Fix webserver user logins.
- Fix wrong path ticket 228.

Note:
- iperf2 has been replaced for iperf3 because of inconsistent results for UDP above 2Gbps.
- iperf3 is not backwards compatible with iperf2.x.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode