@@ -25,6 +25,7 @@ Changes:
 - Add autoresize on SD image. (ARM only)
 - Add sendmail_path to php.ini to use mail() function.
 - Add auto start/stop VM. (virtualbox)
+- Add syncthing and related user and group. (CLI only)
 - Remove usesendfile on CIFS/SMB.
 - Remove legacy disk aliases such as /dev/ad0.
 - Change DSA private key to RSA private key on SSH service.
